--- a/sitemap.conf
+++ b/sitemap.conf
@@ -17,9 +17,9 @@ inputPort 1976
 ############################################
 # parameters to adapt depending on your network
 # Number of connexions in parallel (to adapt depending of your network speed)
-pagesConnexions 100
+pagesConnexions 1000
 # Number of dns calls in parallel
-dnsConnexions 5
+dnsConnexions 50
 # How deep do you want to go in a site
 depthInSite 5
 # do you want to follow external links
@@ -33,7 +33,7 @@ waitDuration 60
 # now, let's customize the search
 
 # first page to fetch (you can specify several urls)
-#startUrl xxx
+#startUrl http://www.qq.com
 
 # Do you want to limit your search to a specific domain ?
 # if yes, uncomment the following line
