大大提高爬虫速度，改进了页面/资源统计

--- a/sitemap.conf
+++ b/sitemap.conf
@@ -17,15 +17,15 @@ inputPort 1976
 ############################################
 # parameters to adapt depending on your network
 # Number of connexions in parallel (to adapt depending of your network speed)
-pagesConnexions 1000
+pagesConnexions 3000
 # Number of dns calls in parallel
-dnsConnexions 50
+dnsConnexions 10
 # How deep do you want to go in a site
 depthInSite 5
 # do you want to follow external links
 #noExternalLinks
 # time between 2 calls on the same server (in sec) : NEVER less than 30
-waitDuration 60
+waitDuration 1
 # Make requests through a proxy (use with care)
 #proxy www 8080
 
@@ -33,7 +33,7 @@ waitDuration 60
 # now, let's customize the search
 
 # first page to fetch (you can specify several urls)
-startUrl http://www.qq.com/
+#startUrl http://www.qq.com/
 
 # Do you want to limit your search to a specific domain ?
 # if yes, uncomment the following line
