--- a/sitemap.conf
+++ b/sitemap.conf
@@ -25,7 +25,7 @@ depthInSite 3
 # do you want to follow external links
 #noExternalLinks
 # time between 2 calls on the same server (in sec) : NEVER less than 30
-waitDuration 10
+waitDuration 3
 # Make requests through a proxy (use with care)
 #proxy www 8080
 
@@ -33,7 +33,7 @@ waitDuration 10
 # now, let's customize the search
 
 # first page to fetch (you can specify several urls)
-#startUrl http://www.qq.com/
+#startUrl http://
 
 # Do you want to limit your search to a specific domain ?
 # if yes, uncomment the following line
